# decipher

./: .gitignore  .pre-commit-config.yaml  PV_Final.ipynb  PV_tumor.py  README.md  __init__.py  atacseq.ipynb  dcf_gse.ipynb  dcf_test.ipynb  decipher_model.py  decipher_training.py  load_data.py  post_analysis.py  post_analysis_plotting.py  pyproject.toml  requirements.txt  scanpy_graph.ipynb  utils.py
analysis/: __init__.py  basis_decomposition.py  trajectory_inference.py
basis_decomposition/: inference.py  model.py  run.py
decipher/: __init__.py  utils.py
decipher/plot/: __init__.py  basis_decomposition.py  decipher.py  trajectory.py  trajectory_inference.py  utils.py
decipher/tools/: __init__.py  basis_decomposition.py  decipher.py  trajectory_inference.py  utils.py
decipher/tools/_basis_decomposition/: inference.py  model.py  run.py
decipher/tools/_decipher/: __init__.py  data.py  decipher.py  module.py  training.py
examples/: 1-tutorial.ipynb
figures/: decipher_3d.html  decipher_3d_Cldn4.html  decipher_3d_Tff1.html  decipher_3d_Try4.html  decipher_3d_cell_type.html  decipher_3d_genotype.html
model/: __init__.py  data.py  decipher.py  decipher_model.py  training.py
plot/: __init__.py  basis_decomposition.py  model.py  trajectory.py  utils.py
tools/: __init__.py  basis_decomposition.py  post_analysis.py  trajectory_inference.py
tutorial/: basis decomposition.ipynb
