[tool.poetry]
name = "scdecipher"
version = "0.1.0"
description = "Decipher is a single-cell analysis package to integrate and compare perturbed samples to healthy samples, to identify the origin of the cell-states perturbations."
authors = ["Achille Nazaret"]
license = "MIT"
readme = "README.md"
packages = [{include = "decipher", from="."}]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch = ">=2"
numpy = "^1.26.2"
pandas = "^2.1.3"
scipy = "^1.11.3"
scanpy = "^1.9.6"
leidenalg = "^0.10.1"
pyro-ppl = "^1.8.6"
randomname = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
